<resources>
    <string name="app_name">UserInterface</string>
    <string name="wrong_id_or_password">아이디 또는 비밀번호를 잘못 입력하셨습니다.</string>
    <string name="recommend_builds">견적 추천</string>
    <string name="guide">가이드</string>
    <string name="search_component">부품 검색</string>
    <string name="my_page">마이페이지</string>
    <string name="community">커뮤니티</string>
    <string name="home">홈</string>
    <string name="post_views">조회 : %d</string>
    <string name="post_likes">추천 : %d</string>
    <string name="post_kind">%s</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="board_tip">
        보드 크기 및 가격\nATX > M-ATX\n\n더 큰 보드를 사용하면\n추후 부품 추가 및\n컴퓨터 조립 시 유리합니다
    </string>
</resources>