<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_component" />
    <item
        android:id="@+id/navigation_guide"
        android:icon="@drawable/ic_beginner_guide"
        android:title="@string/guide" />
    <item
        android:id="@+id/navigation_recommended_builds"
        android:icon="@drawable/ic_recommended_builds"
        android:title="@string/recommend_builds" />
    <item
        android:id="@+id/navigation_community"
        android:icon="@drawable/ic_community"
        android:title="@string/community" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/my_page" />
</menu>